testing/invalid_lexical/lex3.java
class Main {
    static String a = "\gjak se vede";
}
